ctypes_canapedll/CANapAPI_stripped.h

#define _MAX_PATH 260
#define MAX_PATH 260
#define AEC_CMD_NOT_SUP               1  
#define AEC_INTERFACE_NOTSUPPORTED    2  
#define AEC_CREATE_MEM_MAPPED_FILE    3  
#define AEC_WRITE_CMD                 4  
#define AEC_READ_RESPONSE             5  
#define AEC_ASAP2_FILE_NOT_FOUND      6  
#define AEC_INVALID_MODULE_HDL        7  
#define AEC_ERR_OPEN_FILE             8  
#define AEC_UNKNOWN_OBJECT            9  
#define AEC_NO_DATABASE               10 
#define AEC_PAR_SIZE_OVERFLOW         11 
#define AEC_NOT_WRITE_ACCESS          12 
#define AEC_OBJECT_TYPE_DOESNT_MATCH  13 
#define AEC_NO_TASKS_OVERFLOW         14 
#define AEC_CCP_RESPONSE_SIZE_INVALID 15 
#define AEC_TIMEOUT_RESPONSE          16 
#define AEC_NO_VALUES_SAMPLED         17 
#define AEC_ACQ_CHNL_OVERRUN          18 
enum ASAP3_EVENT_CODE
{
  et_ON_DATA_ACQ_START,              
  et_ON_DATA_ACQ_STOP,               
  et_ON_BEFORE_DATA_ACQ_START,       
  et_ON_CLOSEPROJECT,                
  et_ON_OPENPROJECT,                 
  et_ON_CLOSECANAPE                  
};
struct tAsap3Hdl;
typedef struct tAsap3Hdl *TAsap3Hdl;
typedef unsigned short TModulHdl;
 
 
extern bool ASAP3_EXPORT CALL_CONV Asap3GetCanapeModuleParam(TAsap3Hdl hdl, TModulHdl module, char *param, char *value, unsigned int *sizeofValue);
 
extern bool ASAP3_EXPORT CALL_CONV Asap3SetCanapeModuleParam(TAsap3Hdl hdl, TModulHdl module, char* param, char *value);
 
 
extern bool ASAP3_EXPORT CALL_CONV Asap3GetCanapeProjectParam(TAsap3Hdl hdl, char *Section, char *param, char *value, unsigned int *sizeofValue);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetCanapeProjectParam(TAsap3Hdl hdl, char *Section, char *param, char* value);
extern bool ASAP3_EXPORT CALL_CONV Asap3FlashSetODXContainer(TAsap3Hdl hdl,TModulHdl module,const char *ODXContainerfile);
extern bool ASAP3_EXPORT CALL_CONV Asap3FlashGetSessionCount(TAsap3Hdl hdl,TModulHdl module,unsigned long *Count);
extern bool ASAP3_EXPORT CALL_CONV Asap3FlashGetSessionName(TAsap3Hdl hdl,TModulHdl module,unsigned long index,char *Name,long *SizeOfName);
extern bool ASAP3_EXPORT CALL_CONV Asap3FlashGetJobCount(TAsap3Hdl hdl,TModulHdl module,unsigned long *Count);
extern bool ASAP3_EXPORT CALL_CONV Asap3FlashGetJobName(TAsap3Hdl hdl,TModulHdl module,unsigned long index,char *Name,long *SizeOfName);
extern bool ASAP3_EXPORT CALL_CONV Asap3FlashStartFlashJob(TAsap3Hdl hdl,TModulHdl module,const char *SessionName, const char *JobName, const char *ConfigFileName);
extern bool ASAP3_EXPORT CALL_CONV Asap3FlashGetJobState(TAsap3Hdl hdl,TModulHdl module,double *ScriptResult,int *isRunning,long *Progress,char *Info,unsigned long *SizeofInfo);
extern bool ASAP3_EXPORT CALL_CONV Asap3FlashStopJob(TAsap3Hdl hdl,TModulHdl module);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetInteractiveMode(TAsap3Hdl hdl,bool mode);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetInteractiveMode(TAsap3Hdl hdl,bool *mode);
extern bool ASAP3_EXPORT CALL_CONV Asap3RegisterCallBack(TAsap3Hdl hdl,enum ASAP3_EVENT_CODE eventID,void *fnc,unsigned long privateData);
extern bool ASAP3_EXPORT CALL_CONV Asap3UnRegisterCallBack(TAsap3Hdl hdl,enum ASAP3_EVENT_CODE eventID);
extern bool ASAP3_EXPORT CALL_CONV Asap3ConnectToCANape(TAsap3Hdl *hdl, const char *VillaRelease, const char *Directory, const char *language);
extern bool ASAP3_EXPORT CALL_CONV Asap3DisconnectFromCANape(TAsap3Hdl hdl);
extern bool ASAP3_EXPORT CALL_CONV Asap3OpenDisplayForFile(TAsap3Hdl hdl,const char *Patternfile);
extern bool ASAP3_EXPORT CALL_CONV Asap3ReleaseResultList(TAsap3Hdl hdl,const int CountResults, const char *ResultList[]);
extern bool ASAP3_EXPORT CALL_CONV Asap3OpenDisplay ( TAsap3Hdl hdl, const char *Title,
                                                       int         Editable,
                                                       int         Graphical,
                                                       int         CountParameterLabelsList,
                                                       const char *ParameterLabelList[],
                                                       const char *DataDescFile,
                                                       const char *DataVersFile,
                                                       int         CountAppHistList,
                                                       const char *AppHistLabelList[],
                                                       const char *AppHistTextList[],
                                                       const char *AppHistDefault,
                                                       int        *CountModified,
                                                       const char **ModifiedLabelList[],
                                                       int         *CountErrors,
                                                       const char **ErrorLabelList[],
                                                       int         *CountModAppList,
                                                       const char **ModAppHistLabelList[],
                                                       const char **ModAppHistTextList[]);
extern void ASAP3_EXPORT dummy();