ctypes_canapedll/CANapAPI.py


# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 973
if _libs["CANapAPI64.dll"].has("Asap3GetCanapeModuleParam", "stdcall"):
    Asap3GetCanapeModuleParam = _libs["CANapAPI64.dll"].get("Asap3GetCanapeModuleParam", "stdcall")
    Asap3GetCanapeModuleParam.argtypes = [TAsap3Hdl, TModulHdl, String, String, POINTER(c_uint)]
    Asap3GetCanapeModuleParam.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 975
if _libs["CANapAPI64.dll"].has("Asap3SetCanapeModuleParam", "stdcall"):
    Asap3SetCanapeModuleParam = _libs["CANapAPI64.dll"].get("Asap3SetCanapeModuleParam", "stdcall")
    Asap3SetCanapeModuleParam.argtypes = [TAsap3Hdl, TModulHdl, String, String]
    Asap3SetCanapeModuleParam.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 978
if _libs["CANapAPI64.dll"].has("Asap3GetCanapeProjectParam", "stdcall"):
    Asap3GetCanapeProjectParam = _libs["CANapAPI64.dll"].get("Asap3GetCanapeProjectParam", "stdcall")
    Asap3GetCanapeProjectParam.argtypes = [TAsap3Hdl, String, String, String, POINTER(c_uint)]
    Asap3GetCanapeProjectParam.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 979
if _libs["CANapAPI64.dll"].has("Asap3SetCanapeProjectParam", "stdcall"):
    Asap3SetCanapeProjectParam = _libs["CANapAPI64.dll"].get("Asap3SetCanapeProjectParam", "stdcall")
    Asap3SetCanapeProjectParam.argtypes = [TAsap3Hdl, String, String, String]
    Asap3SetCanapeProjectParam.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 980
if _libs["CANapAPI64.dll"].has("Asap3FlashSetODXContainer", "stdcall"):
    Asap3FlashSetODXContainer = _libs["CANapAPI64.dll"].get("Asap3FlashSetODXContainer", "stdcall")
    Asap3FlashSetODXContainer.argtypes = [TAsap3Hdl, TModulHdl, String]
    Asap3FlashSetODXContainer.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 981
if _libs["CANapAPI64.dll"].has("Asap3FlashGetSessionCount", "stdcall"):
    Asap3FlashGetSessionCount = _libs["CANapAPI64.dll"].get("Asap3FlashGetSessionCount", "stdcall")
    Asap3FlashGetSessionCount.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_ulong)]
    Asap3FlashGetSessionCount.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 982
if _libs["CANapAPI64.dll"].has("Asap3FlashGetSessionName", "stdcall"):
    Asap3FlashGetSessionName = _libs["CANapAPI64.dll"].get("Asap3FlashGetSessionName", "stdcall")
    Asap3FlashGetSessionName.argtypes = [TAsap3Hdl, TModulHdl, c_ulong, String, POINTER(c_long)]
    Asap3FlashGetSessionName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 983
if _libs["CANapAPI64.dll"].has("Asap3FlashGetJobCount", "stdcall"):
    Asap3FlashGetJobCount = _libs["CANapAPI64.dll"].get("Asap3FlashGetJobCount", "stdcall")
    Asap3FlashGetJobCount.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_ulong)]
    Asap3FlashGetJobCount.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 984
if _libs["CANapAPI64.dll"].has("Asap3FlashGetJobName", "stdcall"):
    Asap3FlashGetJobName = _libs["CANapAPI64.dll"].get("Asap3FlashGetJobName", "stdcall")
    Asap3FlashGetJobName.argtypes = [TAsap3Hdl, TModulHdl, c_ulong, String, POINTER(c_long)]
    Asap3FlashGetJobName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 985
if _libs["CANapAPI64.dll"].has("Asap3FlashStartFlashJob", "stdcall"):
    Asap3FlashStartFlashJob = _libs["CANapAPI64.dll"].get("Asap3FlashStartFlashJob", "stdcall")
    Asap3FlashStartFlashJob.argtypes = [TAsap3Hdl, TModulHdl, String, String, String]
    Asap3FlashStartFlashJob.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 986
if _libs["CANapAPI64.dll"].has("Asap3FlashGetJobState", "stdcall"):
    Asap3FlashGetJobState = _libs["CANapAPI64.dll"].get("Asap3FlashGetJobState", "stdcall")
    Asap3FlashGetJobState.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_double), POINTER(c_int), POINTER(c_long), String, POINTER(c_ulong)]
    Asap3FlashGetJobState.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 987
if _libs["CANapAPI64.dll"].has("Asap3FlashStopJob", "stdcall"):
    Asap3FlashStopJob = _libs["CANapAPI64.dll"].get("Asap3FlashStopJob", "stdcall")
    Asap3FlashStopJob.argtypes = [TAsap3Hdl, TModulHdl]
    Asap3FlashStopJob.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 988
if _libs["CANapAPI64.dll"].has("Asap3SetInteractiveMode", "stdcall"):
    Asap3SetInteractiveMode = _libs["CANapAPI64.dll"].get("Asap3SetInteractiveMode", "stdcall")
    Asap3SetInteractiveMode.argtypes = [TAsap3Hdl, c_bool]
    Asap3SetInteractiveMode.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 989
if _libs["CANapAPI64.dll"].has("Asap3GetInteractiveMode", "stdcall"):
    Asap3GetInteractiveMode = _libs["CANapAPI64.dll"].get("Asap3GetInteractiveMode", "stdcall")
    Asap3GetInteractiveMode.argtypes = [TAsap3Hdl, POINTER(c_bool)]
    Asap3GetInteractiveMode.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 990
if _libs["CANapAPI64.dll"].has("Asap3RegisterCallBack", "stdcall"):
    Asap3RegisterCallBack = _libs["CANapAPI64.dll"].get("Asap3RegisterCallBack", "stdcall")
    Asap3RegisterCallBack.argtypes = [TAsap3Hdl, enum_ASAP3_EVENT_CODE, POINTER(None), c_ulong]
    Asap3RegisterCallBack.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 991
if _libs["CANapAPI64.dll"].has("Asap3UnRegisterCallBack", "stdcall"):
    Asap3UnRegisterCallBack = _libs["CANapAPI64.dll"].get("Asap3UnRegisterCallBack", "stdcall")
    Asap3UnRegisterCallBack.argtypes = [TAsap3Hdl, enum_ASAP3_EVENT_CODE]
    Asap3UnRegisterCallBack.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 996
if _libs["CANapAPI64.dll"].has("Asap3ConnectToCANape", "stdcall"):
    Asap3ConnectToCANape = _libs["CANapAPI64.dll"].get("Asap3ConnectToCANape", "stdcall")
    Asap3ConnectToCANape.argtypes = [POINTER(TAsap3Hdl), String, String, String]
    Asap3ConnectToCANape.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 997
if _libs["CANapAPI64.dll"].has("Asap3DisconnectFromCANape", "stdcall"):
    Asap3DisconnectFromCANape = _libs["CANapAPI64.dll"].get("Asap3DisconnectFromCANape", "stdcall")
    Asap3DisconnectFromCANape.argtypes = [TAsap3Hdl]
    Asap3DisconnectFromCANape.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 998
if _libs["CANapAPI64.dll"].has("Asap3OpenDisplayForFile", "stdcall"):
    Asap3OpenDisplayForFile = _libs["CANapAPI64.dll"].get("Asap3OpenDisplayForFile", "stdcall")
    Asap3OpenDisplayForFile.argtypes = [TAsap3Hdl, String]
    Asap3OpenDisplayForFile.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 999
if _libs["CANapAPI64.dll"].has("Asap3ReleaseResultList", "stdcall"):
    Asap3ReleaseResultList = _libs["CANapAPI64.dll"].get("Asap3ReleaseResultList", "stdcall")
    Asap3ReleaseResultList.argtypes = [TAsap3Hdl, c_int, POINTER(POINTER(c_char))]
    Asap3ReleaseResultList.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 1000
if _libs["CANapAPI64.dll"].has("Asap3OpenDisplay", "stdcall"):
    Asap3OpenDisplay = _libs["CANapAPI64.dll"].get("Asap3OpenDisplay", "stdcall")
    Asap3OpenDisplay.argtypes = [TAsap3Hdl, String, c_int, c_int, c_int, POINTER(POINTER(c_char)), String, String, c_int, POINTER(POINTER(c_char)), POINTER(POINTER(c_char)), String, POINTER(c_int), POINTER(POINTER(POINTER(c_char))), POINTER(c_int), POINTER(POINTER(POINTER(c_char))), POINTER(c_int), POINTER(POINTER(POINTER(c_char))), POINTER(POINTER(POINTER(c_char)))]
    Asap3OpenDisplay.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 1018
for _lib in _libs.values():
    if not _lib.has("dummy", "cdecl"):
        continue
    dummy = _lib.get("dummy", "cdecl")
    dummy.argtypes = []
    dummy.restype = None
    break

# <command-line>: 1
try:
    _REENTRANT = 1
except:
    pass

__const = c_int# <command-line>: 4

# <command-line>: 7
try:
    CTYPESGEN = 1
except:
    pass

bool = c_bool# C:/mingw/mingw32/lib/gcc/i686-w64-mingw32/8.1.0/include/stdbool.h: 33

# C:/mingw/mingw32/lib/gcc/i686-w64-mingw32/8.1.0/include/stdbool.h: 34
try:
    true = 1
except:
    pass

# C:/mingw/mingw32/lib/gcc/i686-w64-mingw32/8.1.0/include/stdbool.h: 35
try:
    false = 0
except:
    pass

# C:/mingw/mingw32/lib/gcc/i686-w64-mingw32/8.1.0/include/stdbool.h: 52
try:
    __bool_true_false_are_defined = 1
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 6
try:
    _MAX_PATH = 260
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 7
try:
    MAX_PATH = 260
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 9
try:
    AEC_CMD_NOT_SUP = 1
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 10
try:
    AEC_INTERFACE_NOTSUPPORTED = 2
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 11
try:
    AEC_CREATE_MEM_MAPPED_FILE = 3
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 12
try:
    AEC_WRITE_CMD = 4
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 13
try:
    AEC_READ_RESPONSE = 5
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 14
try:
    AEC_ASAP2_FILE_NOT_FOUND = 6
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 15
try:
    AEC_INVALID_MODULE_HDL = 7
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 16
try:
    AEC_ERR_OPEN_FILE = 8
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 17
try:
    AEC_UNKNOWN_OBJECT = 9
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 18
try:
    AEC_NO_DATABASE = 10
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 19
try:
    AEC_PAR_SIZE_OVERFLOW = 11
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 20
try:
    AEC_NOT_WRITE_ACCESS = 12
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 21
try:
    AEC_OBJECT_TYPE_DOESNT_MATCH = 13
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 22
try:
    AEC_NO_TASKS_OVERFLOW = 14
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 23
try:
    AEC_CCP_RESPONSE_SIZE_INVALID = 15
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 24
try:
    AEC_TIMEOUT_RESPONSE = 16
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 25
try:
    AEC_NO_VALUES_SAMPLED = 17
except:
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 26
try:
    AEC_ACQ_CHNL_OVERRUN = 18
except:
    pass
